[package]
name = "grep_preoject"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple grep implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 1


[profile.release]
opt-level = 3
